# vol-surface-engine

./: .gitignore  README.md  Vol-Surface-PROJECT_SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/components/: __init__.py  delta_smile.py  greeks.py  local_vol.py  residual_heatmap.py  surface_3d.py  term_structure.py
data/: download.py  spy_options.parquet
scripts/: generate_synthetic_data.py  plot_iv_smiles.py
src/: __init__.py  arbitrage.py  data_loader.py  iv_engine.py  surface.py  svi_fitter.py
tests/: conftest.py  test_arbitrage.py  test_data_loader.py  test_integration.py  test_iv_engine.py  test_svi_fitter.py
